fixtures/typescript/fallback/should_fail/hidden_payload.tsx
class _ToolUsePayload {
  toolUseId!: string;
}

export function renderToolUse(raw: _ToolUsePayload) {
  return <div>{raw.toolUseId}</div>;
}
